--- a/src/app/componentes/cabecero/cabecero.component.html
+++ b/src/app/componentes/cabecero/cabecero.component.html
@@ -23,11 +23,17 @@
               <i class="fas fa-cog"></i> Configuracion</a>
           </div>
         </li>
-        <li *ngIf="!isLoggedIn" class="nav-item">
-          <a routerLink="/login" class="nav-link">
+        <li *ngIf="!isLoggedIn && permitirRegistro" class="nav-item">
+          <a routerLink="/login" class="nav-link" routerLinkActive="router-link-active">
             <i class="fas fa-user"></i> Login
           </a>
         </li>
+        <li *ngIf="!isLoggedIn && permitirRegistro" class="nav-item">
+          <a routerLink="/registrarse" class="nav-link" routerLinkActive="router-link-active">
+            <i class="fas fa-user"></i> Registro
+          </a>
+        </li>
+
         <li *ngIf="isLoggedIn" class="nav-item">
           <a style="cursor: pointer" (click)="logout()" class="nav-link">
             <i class="fas fa-user-times"></i> Salir
